--- a/style.css
+++ b/style.css
@@ -8,15 +8,34 @@ body{
 
 header {
     color: white;
-    padding:20px;
+    padding:90px;
     background-image: url("imgi/header.jpg");
     background-size:100px 100px 100px 100px;
     background-repeat: no-repeat;
     text-align: center;
-    
-    
+    background-position: 0px -100px;
+  
+}
+
+
+
+.mobile {
+    display: none;
+}
+
+@media  screen and (max-width: 665px) {
+    .mobile {
+        display: inline-block;
+        text-indent: -99999px;
+        background-image: url("imgi/logo.jpg");
+        width: 100px;
+        background-size: 100px;
+        background-repeat: no-repeat;
+    }
     
 }
+   
+
 
 a{
     text-decoration: none;
@@ -28,7 +47,7 @@ a{
 
 } 
 
-.logo{
+.logo {
     background-image: url("imgi/logo.jpg");
     background-position: center;
     background-size: 100px;
@@ -39,6 +58,12 @@ a{
     width: 100px;
 }
 
+@media screen and (max-width: 665px) {
+    .logo {
+        display: none;
+    }
+    
+}
 
 section{
     background: white;
@@ -48,12 +73,22 @@ section{
 
 }
 
-div{
-    background: red;
+.clip{
     padding:10px;
     display: inline-block;
     width: 100px;
     margin:10px;
+    flex-direction: row-reverse;
+    height:auto;
+    width: auto;
+}
+
+@media screen and (max-width: 556px) {
+    div{
+        flex-wrap: wrap-reverse;
+    }
+
+    
 }
 
 footer{
