--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ header {
 @media  screen and (max-width: 665px) {
     header {
         background-position: -500px -30px;
+        background-size: 999px;
+        margin:0px;
+
 }
 
 }
@@ -54,9 +57,11 @@ header {
 } 
 
 @media screen and (max-width: 665px) {
-    a {
-        padding: 5px;
+    nav a {
+        padding: 0px;
         color: white;
+        font-size: medium;
+        margin: 0px;
     }
     
 }
@@ -77,6 +82,7 @@ header {
 @media screen and (max-width: 665px) {
     .logo {
         display: none;
+        padding:20px;
     }
     
 }
@@ -105,6 +111,7 @@ ul a {
 
 }
 
+
 /* clip */
 
 .clip1 {
@@ -130,6 +137,28 @@ ul a {
     background-repeat: no-repeat;
     text-indent: -999999999px;
 }
+
+
+@media screen and (max-width: 665px) {
+    .clip1 {
+        height: 97px;
+        width:190px;
+        background-size: 200px;
+    }
+
+    .clip2 {
+        height: 97px;
+        width:190px;
+        background-size: 200px;
+    }
+
+    .clip3 {
+        height: 97px;
+        width:190px;
+        background-size: 200px;
+    }
+}
+
 
 
 
