--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ body{
         background-position: -500px -30px;
         background-size: 999px;
         margin:0px;
-        padding:30px 20px 10px 30px;
+        padding:30px;
+
 
 }
 
@@ -47,6 +48,7 @@ body{
     background-color: black;
     text-align: center;
     margin: 0px;
+    padding:10px;
     
 }
 
@@ -70,6 +72,7 @@ header ul a{
         color: white;
         font-size: medium;
         margin: 0px;
+        
     }
     
 }
@@ -87,6 +90,8 @@ header ul a{
     width: 100px;
 }
 
+/*mobile*/
+
 @media screen and (max-width: 665px) {
     .logo {
         display: none;
@@ -100,7 +105,7 @@ section{
     background: white;
     color: black;
     padding: 100px;
-    background-size: 500px;
+    background-size: 600px;
     
 }
 
@@ -146,6 +151,8 @@ section ul a {
     text-indent: -999999999px;
 }
 
+/*mobile*/
+
 
 @media screen and (max-width: 665px) {
     .clip1  {
@@ -185,4 +192,5 @@ footer{
     background: black;
     padding:10px;
     margin: auto;
+
 }
